# MonsterGame

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp
include/: Creature.h  Monster.h  Player.h  Potion.h  Random.h
src/: Creature.cpp  Player.cpp
